change registration logic - now admins activate accounts

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -5,11 +5,7 @@ error.status=Status:
 error.message=Message:
 
 # Activation e-mail
-email.activation.title=CompanyApp account activation
-email.activation.greeting=Dear {0}
-email.activation.text1=Your CompanyApp account has been created, please click on the URL below to activate it:
-email.activation.text2=Regards,
-email.signature=CompanyApp Team.
+email.activation.title = [ZPM Kopacz] Rejestracja użytkownika
 
 # Creation email
 email.creation.text1=Your CompanyApp account has been created, please click on the URL below to access it:
