--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -11,8 +11,5 @@ email.activation.title = [ZPM Kopacz] Rejestracja użytkownika
 email.creation.text1=Your CompanyApp account has been created, please click on the URL below to access it:
 
 # Reset e-mail
-email.reset.title=CompanyApp password reset
-email.reset.greeting=Dear {0}
-email.reset.text1=For your CompanyApp account a password reset was requested, please click on the URL below to reset it:
-email.reset.text2=Regards,
+email.reset.title = [ZPM Kopacz] Resetowanie hasła
 
